--- a/pair-code.html
+++ b/pair-code.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>WhatsApp Bot - Pair Code Generator</title>
+    <title>𝚂𝙸𝙻𝙰 𝙼𝙳 - Pair Code Generator</title>
     <style>
         * {
             margin: 0;
@@ -229,7 +229,7 @@
 <body>
     <div class="container">
         <div class="logo">W</div>
-        <h1>WhatsApp Bot</h1>
+        <h1>𝚂𝙸𝙻𝙰 𝙼𝙳</h1>
         <p class="subtitle">Generate WhatsApp Pairing Code</p>
         
         <form id="pairForm">
